--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .app-wrapper {
   display: grid;
-  width: 80%;
+  width: 95%;
   margin: 10px auto 0 auto;
 
 
@@ -8,7 +8,7 @@
   "h h"
   "n c";
   grid-template-rows: 60px 1fr;
-  grid-template-columns: 2fr 10fr;
+  grid-template-columns: 200px 8fr;
   grid-gap: 7px;
 }
 
