--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -1,18 +1,30 @@
 .dialogs {
     display: grid;
-    grid-template-columns: 2fr 10fr;
+    grid-template-areas:
+    'a b'
+    '. b';
+    grid-template-columns: 150px 10fr;
 }
 
 .dialogsItems {
     background-color: rgba(28, 96, 243, 0.17);
     border-radius: 5px;
-    padding: 30px 5px 30px 15px;
+    padding: 0 5px 30px 15px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
-    height: 100%;
+    height: 230px;
 }
 
 .dialog {
+    grid-area: a;
     margin-top: 15px;
+}
+
+.dialog img{
+    background-color: azure;
+    width: 25px;
+    margin-right: 15px;
+    border-radius: 5px;
+    vertical-align: middle;
 }
 
 .dialog a {
@@ -23,6 +35,7 @@
 .dialogs a.active {
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.62);
     padding: 5px 5px;
+    margin-left: 7px;
     background-color: rgba(1, 255, 81, 0.25);
     background-size: 130%;
     border-radius: 3px;
@@ -52,9 +65,9 @@
     padding: 30px;
     margin-left: 10px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
-    height: 100%;
+    height: 300px
 }
 
-.message {
-
+.messages {
+    grid-area: b;
 }
