--- a/src/components/Sidebar/FriendsBar/FriendsBar.module.css
+++ b/src/components/Sidebar/FriendsBar/FriendsBar.module.css
@@ -1,16 +1,42 @@
-.nav {
-    grid-area: n;
+.friends {
+    margin-top: 10px;
     background-color: rgba(28, 96, 243, 0.17);
     border-radius: 5px;
-    height: 200px;
+    height: 210px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
+    overflow: auto;
+}
+
+.friend {
+    margin: 20px 0 0 11px;
+    font-size: 14px;
+    display: inline-grid;
+    width: 50px;
+    color: azure;
+    text-align: center;
+}
+
+.friend img {
+    width: 30px;
+    background-color: azure;
+    border-radius: 10px;
+    margin: 0 auto;
+}
+
+.friend span {
+    display:block;
 }
 
 .item {
     margin-top: 15px;
-    margin-left: -10px;
+    margin-left: 8px;
     color: azure;
     list-style-type: none;
+}
+
+.item span {
+    font-size: 11px;
+    margin-left: 60px;
 }
 
 .item a {
@@ -27,6 +53,7 @@
     border-radius: 3px;
     padding: 7px 7px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
+    margin-left: 3px;
 }
 
 .item a:active {
@@ -40,10 +67,19 @@
     background-color: rgba(1, 255, 81, 0.25);
     background-size: 130%;
     border-radius: 3px;
-    margin-left: -10px;
+    margin-left: 3px;
 }
 
 .item a.active:hover {
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.62);
     padding: 5px 5px;
+}
+
+.line {
+    background-color: rgba(1, 255, 81, 0.25);
+    width: 180px;
+    height: 1px;
+    margin: 10px auto 0;
+    box-shadow: 0 0 5px rgba(1, 255, 81, 0.25);
+    border-radius: 15px;
 }
