--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,15 @@
 .app-wrapper {
-  display: grid;
-  width: 95%;
-  margin: 10px auto 0 auto;
+    display: grid;
+    width: 900px;
+    margin: 10px auto 0;
 
 
-  grid-template-areas:
-  "h h"
-  "n c";
-  grid-template-rows: 60px 1fr;
-  grid-template-columns: 200px 8fr;
-  grid-gap: 7px;
+    grid-template-areas:
+    "h h"
+    "n c";
+    grid-template-rows: 60px 1fr;
+    grid-template-columns: 200px 8fr;
+    grid-gap: 7px;
 }
 
 .app-wrapper-content {
