--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -6,3 +6,41 @@
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
 }
 
+.addPost {
+    margin-left: 87px;
+    margin-bottom: 70px;
+}
+
+.addPost textarea {
+    background-color: rgba(1, 255, 81, 0.2);
+    text-align: start;
+    /*background-color: azure;*/
+    width: 540px;
+    height: 70px;
+    padding: 10px;
+    background-size: 100%;
+    border-radius: 15px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
+}
+
+.addPost button{
+    color: azure;
+    border: none;
+    float: right;
+    margin: 10px 30px;
+    background-color: rgba(1, 255, 81, 0.25);
+    background-size: 130%;
+    border-radius: 3px;
+    padding: 5px 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
+}
+
+.addPost button:hover {
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.62);
+    padding: 7px 7px;
+}
+
+.addPost button:active {
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.62);
+    padding: 5px 5px;
+}
