--- a/src/components/Sidebar/FriendsBar/FriendsBar.module.css
+++ b/src/components/Sidebar/FriendsBar/FriendsBar.module.css
@@ -30,13 +30,14 @@
 .item {
     margin-top: 15px;
     margin-left: 8px;
+    margin-right: 80px;
     color: azure;
     list-style-type: none;
+
 }
 
 .item span {
     font-size: 11px;
-    margin-left: 60px;
 }
 
 .item a {
@@ -54,11 +55,13 @@
     padding: 7px 7px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
     margin-left: 3px;
+    margin-right: 71px;
 }
 
 .item a:active {
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.62);
     padding: 5px 5px;
+    margin-right: 75px;
 }
 
 .item a.active {
@@ -68,6 +71,7 @@
     background-size: 130%;
     border-radius: 3px;
     margin-left: 3px;
+    margin-right: 75px;
 }
 
 .item a.active:hover {
@@ -79,7 +83,7 @@
     background-color: rgba(1, 255, 81, 0.25);
     width: 180px;
     height: 1px;
-    margin: 10px auto 0;
+    margin: 15px auto 0;
     box-shadow: 0 0 5px rgba(1, 255, 81, 0.25);
     border-radius: 15px;
 }
