--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -3,7 +3,8 @@
     grid-template-areas:
     'a b'
     '. b';
-    grid-template-columns: 150px 10fr;
+    grid-template-columns: 150px 12fr;
+    grid-template-rows: 200px 12fr;
 }
 
 .dialogsItems {
@@ -65,19 +66,17 @@
     padding: 30px;
     margin-left: 10px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
-    height: 300px
-}
-
-.messages {
     grid-area: b;
     position:relative;
 }
 
+.message {
+    word-wrap: break-word;
+    word-break: break-word;
+}
+
 .addMessage {
-    position: absolute;
-    bottom: 0;
     margin-bottom: 10px;
-    width: 250px;
 }
 
 .addMessage textarea {
@@ -86,18 +85,21 @@
     background-color: rgba(9, 37, 94, 0.34);
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
-    width: 250px;
-    height: 50px;
+    width: 95%;
+    height: 70px;
+    padding: 10px;
+    margin-top: 30px;
 }
 .addMessage button {
     margin-top: 10px;
+    float: right;
     color: azure;
     border: none;
-    float: right;
+
     background-color: rgba(9, 37, 94, 0.34);
     background-size: 130%;
     border-radius: 3px;
-    padding: 5px 5px;
+    padding: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
 }
 
