--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -12,6 +12,7 @@
 }
 
 .addPost textarea {
+    color: azure;
     background-color: rgba(1, 255, 81, 0.2);
     text-align: start;
     /*background-color: azure;*/
@@ -31,7 +32,7 @@
     background-color: rgba(1, 255, 81, 0.25);
     background-size: 130%;
     border-radius: 3px;
-    padding: 5px 5px;
+    padding: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
 }
 
