--- a/src/components/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/Profile/MyPosts/Post/Post.module.css
@@ -5,10 +5,11 @@
     border-radius: 15px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
     grid-area: b;
-    padding: 10px;
+    padding: 10px 25px 10px 10px;
 }
 
 .post {
+    position: relative;
     display: grid;
     margin-top: 30px;
     margin-left: 20px;
@@ -17,6 +18,20 @@
     "c b";
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr 13fr;
+}
+
+.tagRemove {
+    position: absolute;
+    right: 25px;
+    top: -3px;
+    height: 10px;
+}
+
+.tagRemove:after {
+    content: "\00d7"; /* use the hex value here... */
+    font-size: 20px;
+    color: rgb(0, 0, 0);
+    text-align: center;
 }
 
 .post img{
