--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -2,15 +2,84 @@
     padding-bottom: 20px;
 }
 
-.img img{
+.profileLogo img{
     border-radius: 5px;
     width: 100%;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
 }
 
-.description {
+.profileInfo {
+    display: grid;
+    grid-template-areas:
+    'a b'
+    'c d';
+    grid-template-columns: 1fr 3fr
+;
+
+    min-height: 150px;
     background-color: rgba(28, 96, 243, 0.17);
     border-radius: 5px;
     padding: 10px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
+}
+
+.Photo {
+    grid-area: a;
+}
+
+.Photo img {
+    border-color: rgba(1, 255, 81, 0.18);
+    border-style: inset;
+    border-radius: 5px;
+    margin-top: 15px;
+    width: 150px;
+}
+
+.descriptionInfo {
+    margin: 35px 0 0;
+    grid-area: b;
+    background-color: rgba(1, 255, 81, 0.2);
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
+    padding: 2px 5px;
+    width: 470px;
+}
+
+.descriptionItem {
+    margin: 5px;
+}
+
+.descriptionItem span {
+    margin-right: 10px;
+    font-weight: bold;
+}
+
+.contacts {
+    min-height: 20px;
+    margin-top: 5px;
+    grid-area: c;
+    background-color: rgba(1, 255, 81, 0.2);
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
+    padding: 2px 5px;
+}
+.contacts a {
+    color: azure;
+    text-decoration: none;
+}
+
+.aboutMe {
+    grid-area: d;
+    background-color: rgba(1, 255, 81, 0.2);
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
+    padding: 2px 5px;
+    min-height: 150px;
+    width: 450px;
+    margin: 20px 0 0 20px;
+}
+
+.aboutMe span {
+    margin-right: 10px;
+    font-weight: bold;
 }
