--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -18,3 +18,19 @@
     margin: 10px;
     text-shadow: rgba(1, 255, 81, 0.76) 1px 0 10px;
 }
+
+.loginBlock {
+    color: azure;
+    text-decoration: none;
+    float: right;
+    margin: 15px 20px;
+    background-color: rgba(1, 255, 81, 0.25);
+    background-size: 130%;
+    border-radius: 3px;
+    padding: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
+}
+
+.loginBlock:hover {
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.62);
+}
