--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -13,7 +13,7 @@
     grid-template-areas:
     'a b'
     'c d';
-    grid-template-columns: 1fr 3fr
+    grid-template-columns: 200px 3fr
 ;
 
     min-height: 150px;
@@ -42,7 +42,7 @@
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
     padding: 2px 5px;
-    width: 470px;
+    width: 450px;
 }
 
 .descriptionItem {
@@ -62,6 +62,8 @@
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
     padding: 2px 5px;
+    width: 200px;
+    word-wrap: break-word;
 }
 .contacts a {
     color: azure;
@@ -75,7 +77,7 @@
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
     padding: 2px 5px;
     min-height: 150px;
-    width: 450px;
+    width: 430px;
     margin: 20px 0 0 20px;
 }
 
