--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -8,15 +8,16 @@
 }
 
 .dialogsItems {
+    overflow: auto;
+    grid-area: a;
     background-color: rgba(28, 96, 243, 0.17);
     border-radius: 5px;
-    padding: 0 5px 30px 15px;
+    padding: 0 5px 15px 15px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
-    height: 230px;
+    height: 250px;
 }
 
 .dialog {
-    grid-area: a;
     margin-top: 15px;
 }
 
