--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -36,6 +36,11 @@
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
 }
 
+.addPost button:disabled {
+    color: rgba(240, 255, 255, 0.1);
+    background-color: rgba(2, 2, 2, 0.25);
+}
+
 .addPost button:hover {
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.62);
     padding: 7px 7px;
