--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,7 +1,7 @@
 .header {
     width: 100%;
     grid-area: h;
-    background-color: rgba(28, 96, 243, 0.17);
+    /*background-color: rgba(28, 96, 243, 0.17);*/
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
 }
