--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -1,14 +1,24 @@
 .posts {
-    padding: 10px;
-    border-radius: 5px;
     grid-area: c;
-    background-color: rgba(28, 96, 243, 0.17);
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
+    /*background-color: rgba(28, 96, 243, 0.17);*/
+    /*box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);*/
+    /*border-radius: 30px;*/
+    padding: 5px 20px 20px;
+    /*box-shadow: 0 0 5px rgba(1, 255, 81, 0.25);*/
+}
+
+.posts span {
+    display: block;
+    margin: 0 auto 50px;
+    width: 100px;
+    font-weight: 700;
+    font-size: 18px;
 }
 
 .addPost {
-    margin-left: 87px;
-    margin-bottom: 70px;
+    display: block;
+    margin: 0 auto;
+    width: 90%;
 }
 
 .addPost textarea {
@@ -16,7 +26,7 @@
     background-color: rgba(1, 255, 81, 0.2);
     text-align: start;
     /*background-color: azure;*/
-    width: 540px;
+    width: 100%;
     height: 70px;
     padding: 10px;
     background-size: 100%;
