--- a/src/components/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/Profile/MyPosts/Post/Post.module.css
@@ -11,8 +11,8 @@
 .post {
     position: relative;
     display: grid;
-    margin-top: 30px;
-    margin-left: 20px;
+    margin: 70px auto;
+
     grid-template-areas:
     "a b"
     "c b";
