--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,3 +1,48 @@
 .profileWrapper {
+  position: relative;
+}
 
+.profileEditFormWrapper {
+    background-color: rgba(41, 48, 70, 0.98);
+    box-shadow: 0 0 5px black;
+    border-radius: 5px;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 999;
+}
+
+.profileEditForm {
+    display: block;
+    margin: 120px auto;
+    border-radius: 5px;
+    padding: 20px;
+    background-color: rgba(38, 210, 96, 0.34);
+    width: 500px;
+    box-shadow: 0 0 5px black;
+}
+
+.profileEditForm input{
+    margin-left: 10px;
+    color: azure;
+    cursor: pointer;
+    border: none;
+    background: none;
+    width: 200px;
+}
+
+.checkbox::after{
+
+}
+
+.selectInfo {
+    display: flex;
+    gap:20px;
+    margin-bottom: 20px;
+}
+
+.selectInfo div {
+
+    text-shadow: 2px 2px 4px black;
+    cursor: pointer;
 }
