--- a/src/components/Sidebar/Navbar/Navbar.module.css
+++ b/src/components/Sidebar/Navbar/Navbar.module.css
@@ -1,8 +1,8 @@
 .nav {
-    background-color: rgba(28, 96, 243, 0.17);
-    border-radius: 5px;
-    height: 260px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
+    /*background-color: rgba(28, 96, 243, 0.17);*/
+    /*border-radius: 5px;*/
+    /*height: 260px;*/
+    /*box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);*/
     overflow: auto;
 }
 
@@ -10,6 +10,7 @@
     margin-top: 15px;
     margin-left: -20px;
     color: azure;
+    font-weight: 600;
     list-style-type: none;
 }
 
@@ -53,4 +54,13 @@
 .item a.active:hover {
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.62);
     padding: 5px 5px;
+}
+
+.line {
+    background-color: rgba(1, 255, 81, 0.25);
+    width: 60px;
+    height: 1px;
+    margin: 40px auto 0;
+    box-shadow: 0 0 5px rgba(1, 255, 81, 0.25);
+    border-radius: 15px;
 }
