--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -11,29 +11,35 @@
     text-align: center;
 }
 
+.users {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .userItem {
     display: grid;
     grid-template-areas:
     "f i";
     grid-template-columns: 130px auto;
 
-    background-color: rgba(1, 255, 81, 0.18);
+    background-color: rgba(1, 255, 81, 0.14);
     border-radius: 5px;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.62);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.32);
     margin: 10px auto;
-    padding: 20px;
-    width: 600px;
-    height: 100px;
+    padding: 10px;
+    width: 300px;
+    height: 80px;
 }
 
 .userItem:hover {
     box-shadow: 0 0 15px rgba(1, 255, 81, 0.18);
-    width: 605px;
+    width: 300px;
 
 }
 
 .userPhoto {
-    width: 60px;
+    margin-left: 5px;
+    width: 45px;
     border-radius: 5px;
 }
 
@@ -42,6 +48,7 @@
 }
 
 .followed {
+    font-size: 12px;
     margin-top: 5px;
     cursor: pointer;
     color: azure;
@@ -78,6 +85,13 @@
     grid-area: i;
 }
 
-.preloader {
-
+.showMore {
+    display: block;
+    margin: 15px 300px;
+    color: azure;
+    border: none;
+    background-color: rgba(1, 255, 81, 0.25);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.62);
+    border-radius: 3px;
+    padding: 7px 10px;
 }
