--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,9 +1,8 @@
 .header {
     width: 100%;
     grid-area: h;
-    /*background-color: rgba(28, 96, 243, 0.17);*/
-    border-radius: 5px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
+    display: flex;
+    align-items: center;
 }
 
 .header img {
@@ -14,23 +13,20 @@
 
 .header span {
     color: azure;
-    position: absolute;
-    margin: 10px;
-    text-shadow: rgba(1, 255, 81, 0.76) 1px 0 10px;
+    text-shadow: rgba(1, 255, 81, 0.76) 2px 2px 5px;
+    margin-left: 20px;
+    font-size: 18px;
+    font-weight: bold;
 }
 
-.loginBlock {
+.logout, .loginBlock {
+    margin-left: auto;
     color: azure;
-    text-decoration: none;
-    float: right;
-    margin: 15px 20px;
-    background-color: rgba(1, 255, 81, 0.25);
-    background-size: 130%;
+    height: 25px;
+    cursor: pointer;
+    background: none;
+    border: none;
     border-radius: 3px;
     padding: 5px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
 }
 
-.loginBlock:hover {
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.62);
-}
