--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -1,17 +1,9 @@
-/*.loginFormWrapper {*/
-/*    background-color: rgba(1, 255, 81, 0.2);*/
-/*    border-radius: 5px;*/
-/*    box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);*/
-/*    padding: 5px;*/
-/*    width: 500px;*/
-/*}*/
 
 .loginForm {
     margin: 20px 70px;
     /*width: 180px;*/
-    background-color: rgba(1, 255, 81, 0.2);
-    border-radius: 5px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
+    border-radius: 30px;
+    box-shadow: inset 0 0 10px 3px rgba(0, 0, 0, 0.62), 0 0 3px rgba(1, 255, 81, 0.25);
     padding: 20px;
     width: 300px;
     text-align: center;
@@ -35,7 +27,8 @@
     padding: 5px 10px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
     border-radius: 3px;
-    margin-left: -120px;
+    margin: 0 auto auto 165px;
+    width: 150px;
 }
 
 .login:disabled {
