--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -1,44 +1,49 @@
-.posts {
-    grid-area: c;
-    /*background-color: rgba(28, 96, 243, 0.17);*/
-    /*box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);*/
-    /*border-radius: 30px;*/
-    padding: 5px 20px 20px;
-    /*box-shadow: 0 0 5px rgba(1, 255, 81, 0.25);*/
-}
-
-.posts span {
+.postsWrapper span {
     display: block;
-    margin: 0 auto 50px;
+    margin: 30px auto 20px;
     width: 100px;
     font-weight: 700;
     font-size: 18px;
 }
 
+.posts {
+    grid-area: c;
+    border-radius: 30px;
+    margin: 10px 0 10px;
+    padding: 30px 20px 20px;
+    box-shadow: inset 0 0 10px 3px rgba(0, 0, 0, 0.62),  0 0 3px rgba(1, 255, 81, 0.25);
+}
+
+
 .addPost {
     display: block;
-    margin: 0 auto;
+    margin-left: 22px;
     width: 90%;
 }
 
 .addPost textarea {
+    resize: none;
     color: azure;
-    background-color: rgba(1, 255, 81, 0.2);
     text-align: start;
-    /*background-color: azure;*/
     width: 100%;
     height: 70px;
     padding: 10px;
-    background-size: 100%;
+    background: none;
     border-radius: 15px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
+    border: none;
+    outline: none;
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.62);
+}
+
+.addPost textarea:focus {
+    box-shadow: 0 0 7px rgba(0, 0, 0, 0.62), inset 0 0 3px rgba(1, 255, 81, 0.46);
 }
 
 .addPost button{
     color: azure;
     border: none;
     float: right;
-    margin: 10px 30px;
+    margin: 5px;
     background-color: rgba(1, 255, 81, 0.25);
     background-size: 130%;
     border-radius: 3px;
