--- a/src/components/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/Profile/MyPosts/Post/Post.module.css
@@ -1,9 +1,9 @@
 .message {
-    background-color: rgba(1, 255, 81, 0.2);
+    /*background-color: rgba(1, 255, 81, 0.2);*/
     margin: 0 20px 10px;
-    background-size: 100%;
+    /*background-size: 100%;*/
     border-radius: 15px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.62);
     grid-area: b;
     padding: 10px 25px 10px 10px;
 }
@@ -11,7 +11,7 @@
 .post {
     position: relative;
     display: grid;
-    margin: 70px auto;
+    margin: 50px auto 0;
 
     grid-template-areas:
     "a b"
@@ -22,12 +22,12 @@
 
 .tagRemove {
     position: absolute;
-    right: 25px;
-    top: -3px;
+    right: -30px;
+    top: -30px;
     height: 10px;
 }
 
-.tagRemove:after {
+.tagRemove:before {
     content: "\00d7"; /* use the hex value here... */
     font-size: 20px;
     color: rgb(0, 0, 0);
