--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -3,46 +3,79 @@
 }
 
 .profileEditFormWrapper {
-    background-color: rgba(41, 48, 70, 0.98);
-    box-shadow: 0 0 5px black;
-    border-radius: 5px;
+    /*background-color: rgba(41, 48, 70, 0.98);*/
+    /*box-shadow: 0 0 5px black;*/
+    /*border-radius: 5px;*/
     width: 100%;
     height: 100%;
-    position: absolute;
-    z-index: 999;
 }
 
 .profileEditForm {
-    display: block;
-    margin: 120px auto;
     border-radius: 5px;
-    padding: 20px;
-    background-color: rgba(38, 210, 96, 0.34);
-    width: 500px;
-    box-shadow: 0 0 5px black;
+    padding: 10px;
+    min-height: 133px;
+}
+
+.line {
+    background-color: rgba(1, 255, 81, 0.25);
+    margin: 5px 0 10px ;
+    width: 105px;
+    height: 1px;
+    box-shadow: 0 0 5px rgba(1, 255, 81, 0.25);
+    border-radius: 15px;
+}
+
+.save, .close {
+    display: inline-block;
+    cursor: pointer;
+    color: azure;
+    border: none;
+    background: none;
+    text-shadow: 2px 2px 4px black;
+    font-weight: 600;
+    text-align: center;
+    font-size: 16px;
+    margin: 0 10px 5px 0;
+}
+
+.save:hover, .close:hover {
+    text-shadow: 2px 2px 4px rgba(10, 210, 49, 0.72);
 }
 
 .profileEditForm input{
+    display: inline-block;
     margin-left: 10px;
     color: azure;
     cursor: pointer;
     border: none;
     background: none;
-    width: 200px;
+    width: 70%;
+    white-space: normal;
 }
 
-.checkbox::after{
+.profileEditForm textarea {
+    color: azure;
+    cursor: pointer;
+    border: none;
+    background: none;
+    overflow:hidden;
+    resize: none;
+    width: 100%;
+    height: 100px;
+}
 
+
+.checkbox input {
+    width: 12px;
+    height: 12px;
+}
+
+.contacts {
+    overflow-wrap: break-word;
 }
 
 .selectInfo {
     display: flex;
     gap:20px;
     margin-bottom: 20px;
-}
-
-.selectInfo div {
-
-    text-shadow: 2px 2px 4px black;
-    cursor: pointer;
 }
