--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -1,14 +1,14 @@
 .info {
-    padding-bottom: 20px;
+
 }
 
-.blockName {
-    display: block;
-    margin: 20px auto;
-    width: 100px;
-    font-weight: 700;
-    font-size: 18px;
-}
+/*.blockName {*/
+/*    display: block;*/
+/*    margin: 20px auto;*/
+/*    width: 100px;*/
+/*    font-weight: 700;*/
+/*    font-size: 18px;*/
+/*}*/
 
 .profileLogo img{
     border-radius: 5px;
@@ -24,11 +24,10 @@
     grid-template-columns: 200px 3fr;
 
     min-height: 150px;
-    /*background-color: rgba(28, 96, 243, 0.17);*/
-    /*border-radius: 30px;*/
+    border-radius: 30px;
     padding: 20px;
-    /*box-shadow: 0 0 5px rgba(1, 255, 81, 0.25);*/
-    margin-top: 5px;
+    /*background-color: rgba(58, 255, 0, 0.07);*/
+    box-shadow: inset 0 0 10px 3px rgba(0, 0, 0, 0.62), 0 0 3px rgba(1, 255, 81, 0.25);
 }
 
 .Photo {
@@ -36,16 +35,17 @@
 }
 
 .Photo img {
+    display: block;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.62);
-    margin-top: 15px;
+margin: 0 auto;
     width: 150px;
 }
 
 .Photo img:hover ~ .downPhoto{
     display: inline-block;
     position: absolute;
-    margin: 30px auto 0 -538px;
+    margin: -140px auto 0 -246px;
 }
 
 .downPhoto {
@@ -59,7 +59,7 @@
 .downPhoto:hover {
     display: inline-block;
     position: absolute;
-    margin: 30px auto 0 -538px;
+    margin: -140px auto 0 -246px;
 }
 
 .inputDownPhoto {
@@ -76,62 +76,53 @@
     cursor: pointer;
 }
 
-
 .selectInfo {
     display: flex;
-    gap: 10px;
+    gap: 35px;
     text-align: center;
     height: 25px;
+
+    margin: 0 auto;
 }
 
 .selectInfo button{
     cursor: pointer;
     color: azure;
     border: none;
-    /*width: 80px;*/
     background: none;
-    /*background-color: rgba(1, 255, 81, 0.2);*/
-    /*border-radius: 5px;*/
-    /*box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);*/
-    /*padding: 5px;*/
     text-shadow: 2px 2px 4px black;
     font-weight: 600;
     text-align: center;
+}
 
+.selectInfo button:hover {
+    text-shadow: 2px 2px 4px rgba(10, 210, 49, 0.72);
+}
+
+.selectInfo .active {
+    text-shadow: 2px 2px 4px rgba(10, 210, 49, 0.72);
+    font-size: 16px;
 }
 
 .line {
     background-color: rgba(1, 255, 81, 0.25);
-    margin: 10px auto 0 17px;
-    width: 200px;
+    margin: 10px auto 0 ;
+    width: 450px;
     height: 1px;
     box-shadow: 0 0 5px rgba(1, 255, 81, 0.25);
     border-radius: 15px;
 }
 
-/*.lineWrapper {*/
-/*    background-color: rgba(1, 255, 81, 0.25);*/
-/*    margin: 20px auto 0;*/
-/*    width: 90%;*/
-/*    height: 1px;*/
-/*    box-shadow: 0 0 5px rgba(1, 255, 81, 0.25);*/
-/*    border-radius: 15px;*/
-/*}*/
-
 .descriptionInfo {
     grid-area: b;
-    /*background-color: rgba(1, 255, 81, 0.2);*/
-    /*border-radius: 5px;*/
-    /*box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);*/
     padding: 10px;
-    height: 133px;
+    min-height: 133px;
     width: 430px;
-    /*border-radius: 15px;*/
-    /*box-shadow: 0 0 5px rgba(1, 255, 81, 0.25);*/
 }
 
 .descriptionItem {
     margin: 5px;
+    overflow-wrap: break-word;
 }
 
 .descriptionItem span {
@@ -148,13 +139,17 @@
     /*border-radius: 5px;*/
     /*box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);*/
     padding: 10px;
-    height: 133px;
+    min-height: 133px;
     width: 430px;
-    word-wrap: break-word;
+    white-space: nowrap;
+    overflow: hidden;
+    /*text-overflow: ellipsis;*/
 }
 .contacts a {
     color: azure;
     text-decoration: none;
+    margin-left: 10px;
+    font-size: 12px;
 }
 
 .aboutMe {
@@ -163,7 +158,7 @@
     /*border-radius: 5px;*/
     /*box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);*/
     padding: 10px;
-    height: 133px;
+    min-height: 133px;
     width: 430px;
 }
 
