--- a/src/components/Sidebar/Navbar/Navbar.module.css
+++ b/src/components/Sidebar/Navbar/Navbar.module.css
@@ -3,7 +3,7 @@
     /*border-radius: 5px;*/
     /*height: 260px;*/
     /*box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);*/
-    overflow: auto;
+    /*overflow: auto;*/
 }
 
 .item {
