--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -1,20 +1,3 @@
-.selectedPage {
-    font-weight: bold;
-    word-wrap: normal;
-    display: inline-block;
-    text-align: center;
-    margin: 5px;
-}
-
-.numberPage {
-    cursor:pointer;
-    text-align: center;
-}
-
-.users {
-    display: flex;
-    flex-wrap: wrap;
-}
 
 .userItem {
     display: grid;
@@ -22,19 +5,17 @@
     "f i";
     grid-template-columns: 130px auto;
 
-    background-color: rgba(1, 255, 81, 0.14);
-    border-radius: 5px;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.32);
+    border-radius: 30px;
+    box-shadow: inset 0 0 10px 3px rgba(0, 0, 0, 0.62), 0 0 3px rgba(1, 255, 81, 0.25);
     margin: 10px auto;
-    padding: 10px;
-    width: 300px;
+    padding: 20px;
+    width: 90%;
     height: 80px;
 }
 
 .userItem:hover {
     box-shadow: 0 0 15px rgba(1, 255, 81, 0.18);
-    width: 300px;
-
+    width: 91%;
 }
 
 .userPhoto {
@@ -53,32 +34,28 @@
     cursor: pointer;
     color: azure;
     border: none;
-    background-color: rgba(28, 96, 243, 0.17);
-
+    background: none;
+    font-weight: bold;
+    text-shadow: 1px 1px 5px rgba(255, 0, 0, 0.73);
     border-radius: 3px;
-    padding: 5px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
 }
 
 .followed_follow {
-    background-color: rgba(1, 255, 81, 0.18);
+    text-shadow: 1px 1px 5px rgba(10, 210, 49, 0.72);
     margin-left: 5px;
 }
 
 .followed:disabled {
     box-shadow: none;
-    background-color: rgba(77, 74, 74, 0.82);
+    color: rgba(0, 0, 0, 0.62);
 }
 .followed:disabled:hover {
     box-shadow: none;
     cursor: default;
-    background-color: rgba(77, 74, 74, 0.82);
 }
 
 .followed:hover {
-    background-color: rgba(1, 255, 81, 0.18);
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.62);
-
+    font-size: 14px;
 }
 
 .info {
