--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -36,26 +36,33 @@
     border: none;
     background: none;
     font-weight: bold;
-    text-shadow: 1px 1px 5px rgba(255, 0, 0, 0.73);
+    text-shadow: 2px 2px 4px black;
     border-radius: 3px;
+    box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.62);
+    padding: 7px;
 }
 
 .followed_follow {
-    text-shadow: 1px 1px 5px rgba(10, 210, 49, 0.72);
+    text-shadow: 2px 2px 4px black;
     margin-left: 5px;
+    box-shadow:  0 0 15px rgba(0, 0, 0, 0.62);
 }
 
 .followed:disabled {
+    text-shadow: none;
     box-shadow: none;
     color: rgba(0, 0, 0, 0.62);
+
 }
 .followed:disabled:hover {
     box-shadow: none;
     cursor: default;
+    font-size: 12px;
 }
 
 .followed:hover {
-    font-size: 14px;
+    font-size: 13px;
+    font-weight: bold;
 }
 
 .info {
@@ -67,7 +74,7 @@
     margin: 15px 300px;
     color: azure;
     border: none;
-    background-color: rgba(1, 255, 81, 0.25);
+background: none;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.62);
     border-radius: 3px;
     padding: 7px 10px;
