--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -39,15 +39,26 @@
     box-shadow: 0 0 7px rgba(0, 0, 0, 0.62), inset 0 0 3px rgba(1, 255, 81, 0.46);
 }
 
+.addPostButton {
+    margin-top: 5px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+
+.addPostButton p {
+    margin: 0;
+}
+
 .addPost button{
     color: azure;
     border: none;
-    float: right;
-    margin: 5px;
     background-color: rgba(1, 255, 81, 0.25);
     background-size: 130%;
     border-radius: 3px;
+    margin-left: 50px;
     padding: 5px;
+    height: 25px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
 }
 
