--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -10,10 +10,10 @@
 .dialogsItems {
     overflow: auto;
     grid-area: a;
-    background-color: rgba(28, 96, 243, 0.17);
-    border-radius: 5px;
+    /*background-color: rgba(28, 96, 243, 0.17);*/
+    border-radius: 20px;
     padding: 0 5px 15px 15px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
+    box-shadow: inset 0 0 10px 3px rgba(0, 0, 0, 0.62), 0 0 3px rgba(1, 255, 81, 0.25);
     height: 250px;
 }
 
@@ -34,38 +34,38 @@
 }
 
 .dialogs a.active {
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.62);
+    /*box-shadow: 0 0 15px rgba(0, 0, 0, 0.62);*/
     padding: 5px 5px;
     margin-left: 7px;
-    background-color: rgba(1, 255, 81, 0.25);
+    /*background-color: rgba(1, 255, 81, 0.25);*/
     background-size: 130%;
     border-radius: 3px;
 }
 
 .dialog a:hover {
-    background-color: rgba(1, 255, 81, 0.25);
+    /*background-color: rgba(1, 255, 81, 0.25);*/
     background-size: 130%;
     border-radius: 3px;
     padding: 7px 7px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
+    /*box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);*/
 }
 
 .dialog a:active {
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.62);
+    /*box-shadow: 0 0 15px rgba(0, 0, 0, 0.62);*/
     padding: 5px 5px;
 }
 
 .dialog a.active:hover {
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.62);
+    /*box-shadow: 0 0 15px rgba(0, 0, 0, 0.62);*/
     padding: 5px 5px;
 }
 
 .messages {
-    background-color: rgba(1, 255, 81, 0.18);
-    border-radius: 15px;
+    /*background-color: rgba(1, 255, 81, 0.18);*/
+    border-radius: 30px;
     padding: 30px;
     margin-left: 10px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
+    box-shadow: inset 0 0 10px 3px rgba(0, 0, 0, 0.62), 0 0 3px rgba(1, 255, 81, 0.25);
     grid-area: b;
     position:relative;
 }
@@ -80,9 +80,10 @@
 }
 
 .addMessage textarea {
+    resize: none;
     color: azure;
     border: none;
-    background-color: rgba(9, 37, 94, 0.34);
+    background: none;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
     width: 95%;
