--- a/src/components/Sidebar/Navbar/Navbar.module.css
+++ b/src/components/Sidebar/Navbar/Navbar.module.css
@@ -1,66 +1,64 @@
 .nav {
-    /*background-color: rgba(28, 96, 243, 0.17);*/
-    /*border-radius: 5px;*/
-    /*height: 260px;*/
-    /*box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);*/
-    /*overflow: auto;*/
+    height: 260px;
+
+}
+
+ul {
+    padding-left: 20px;
+    margin-top: 0;
 }
 
 .item {
-    margin-top: 15px;
-    margin-left: -20px;
+    margin-bottom: 15px;
     color: azure;
-    font-weight: 600;
     list-style-type: none;
+    text-shadow: 2px 2px 4px black;
+    padding: 5px;
+    height: 15px;
 }
 
 .item img {
     width: 25px;
-    margin-right: 30px;
     border-radius: 5px;
     vertical-align: middle;
 }
 
-.item a {
+a {
     text-decoration: none;
+    font-weight: 600;
 }
 
-.item a:visited {
+a:visited {
     color: azure;
 }
 
-.item a:hover {
-    background-color: rgba(1, 255, 81, 0.25);
-    background-size: 130%;
-    border-radius: 3px;
-    padding: 7px 7px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
+.inactive {
+    margin-left: 10px;
+    font-size: 15px;
 }
 
-.item a:active {
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.62);
-    padding: 5px 5px;
+.item a:hover {
+    font-size: 16px;
+    text-shadow: 2px 2px 4px rgba(10, 210, 49, 0.72);
 }
 
 .item a.active {
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.62);
     padding: 5px 5px;
-    background-color: rgba(1, 255, 81, 0.25);
     background-size: 130%;
     border-radius: 3px;
-    margin-left: -10px;
-}
-
-.item a.active:hover {
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.62);
-    padding: 5px 5px;
+    font-size: 17px;
+    margin-left: 15px;
+    text-shadow: 2px 2px 4px rgba(10, 210, 49, 0.72);
 }
 
 .line {
     background-color: rgba(1, 255, 81, 0.25);
     width: 60px;
     height: 1px;
-    margin: 40px auto 0;
+    margin: 40px 50px 0;
     box-shadow: 0 0 5px rgba(1, 255, 81, 0.25);
     border-radius: 15px;
+}
+.lineUp {
+    margin: 0 50px 20px;
 }
