--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -71,6 +71,10 @@
 }
 
 .message {
+    border-radius: 20px;
+    box-shadow: inset 0 0 10px 3px rgba(0, 0, 0, 0.62), 0 0 3px rgba(1, 255, 81, 0.25);
+    padding: 15px;
+    min-height: 200px;
     word-wrap: break-word;
     word-break: break-word;
 }
@@ -84,13 +88,19 @@
     color: azure;
     border: none;
     background: none;
-    border-radius: 5px;
+    border-radius: 20px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
     width: 95%;
     height: 70px;
     padding: 10px;
     margin-top: 30px;
+    outline: none;
 }
+
+.addMessage textarea:focus {
+    box-shadow: 0 0 7px rgba(0, 0, 0, 0.62), inset 0 0 3px rgba(1, 255, 81, 0.46);
+}
+
 .addMessage button {
     margin-top: 10px;
     float: right;
