--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,27 @@
 .app-wrapper {
     display: grid;
-    width: 900px;
-    margin: 10px auto 0;
-
 
     grid-template-areas:
-    "h h"
-    "n c";
-    grid-template-rows: 60px 1fr;
-    grid-template-columns: 200px 8fr;
-    grid-gap: 7px;
+    "h"
+    "c";
+
+    grid-gap: 15px;
 }
+
+
 
 .app-wrapper-content {
     grid-area: c;
+    color: azure;
+    width: 900px;
+    margin: 0 auto;
+}
+
+a {
+    color: azure;
+    text-decoration: none;
+}
+
+a:visited {
     color: azure;
 }
