--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,26 +1,28 @@
 .header {
+    position: fixed;
+    z-index: 10;
     width: 100%;
     grid-area: h;
-    display: flex;
-    align-items: center;
+    box-shadow:  0 4px 10px -5px rgba(0, 0, 0, 0.62), inset 0 -4px 3px -3px rgba(1, 255, 81, 0.25);
+    background-color: rgba(44, 43, 43, 0.98);
+    padding: 10px 0;
 }
 
-.header img {
-    padding: 6px;
-    width: 45px;
-    border-radius: 5px;
+.headerContent {
+    margin: 0 auto;
+    width: 900px;
+    display: flex;
 }
 
 .header span {
     color: azure;
     text-shadow: rgba(1, 255, 81, 0.76) 2px 2px 5px;
-    margin-left: 35px;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: bold;
 }
 
 .logout, .loginBlock {
-    margin-left: auto;
+    margin-left: 100px;
     color: azure;
     height: 25px;
     cursor: pointer;
@@ -30,3 +32,44 @@
     padding: 5px;
 }
 
+.nav {
+    margin: 0 auto;
+    width: 250px;
+}
+
+.itemsNav {
+    display: flex;
+    justify-content: space-around;
+    gap: 20px;
+    margin: 0 auto;
+}
+
+.item {
+    display: flex;
+    list-style-type: none;
+    align-items: center;
+    margin: 0 auto;
+    font-weight: bold;
+}
+
+.item .active {
+    text-shadow: 2px 2px 4px rgba(10, 210, 49, 0.72);
+    margin-left: 10px;
+}
+
+.item .inactive {
+    margin-left: 10px;
+}
+
+.item img {
+    width: 25px;
+}
+
+.active .line {
+    background-color: rgba(1, 255, 81, 0.25);
+    width: 100%;
+    height: 1px;
+    margin: 5px 0 0;
+    box-shadow: 0 0 5px rgba(1, 255, 81, 0.25);
+    border-radius: 15px;
+}
