--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -1,9 +1,9 @@
 
 .loginForm {
-    margin: 20px 70px;
+    margin: 100px auto 0;
     /*width: 180px;*/
-    border-radius: 30px;
-    box-shadow: inset 0 0 10px 3px rgba(0, 0, 0, 0.62), 0 0 3px rgba(1, 255, 81, 0.25);
+    border-radius: 5px;
+    box-shadow:  0 0 10px 3px rgba(0, 0, 0, 0.62), inset 0 0 3px rgba(1, 255, 81, 0.25);
     padding: 20px;
     width: 300px;
     text-align: center;
@@ -27,7 +27,7 @@
     padding: 5px 10px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.62);
     border-radius: 3px;
-    margin: 0 auto auto 165px;
+    margin: 10px auto ;
     width: 150px;
 }
 
