--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -8,10 +8,10 @@
 
 .posts {
     grid-area: c;
-    border-radius: 30px;
+    border-radius: 5px;
     margin: 10px 0 10px;
     padding: 30px 20px 20px;
-    box-shadow: inset 0 0 10px 3px rgba(0, 0, 0, 0.62),  0 0 3px rgba(1, 255, 81, 0.25);
+    box-shadow:  0 0 10px 3px rgba(0, 0, 0, 0.62), inset 0 0 3px rgba(1, 255, 81, 0.25);
 }
 
 
@@ -29,7 +29,7 @@
     height: 70px;
     padding: 10px;
     background: none;
-    border-radius: 15px;
+    border-radius: 5px;
     border: none;
     outline: none;
     box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.62);
