--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,5 +1,7 @@
 .profileWrapper {
-  position: relative;
+    position: relative;
+    width: 80%;
+    margin: 45px auto;
 }
 
 .profileEditFormWrapper {
@@ -18,7 +20,7 @@
 
 .line {
     background-color: rgba(1, 255, 81, 0.25);
-    margin: 5px 0 10px ;
+    margin: 5px 0 10px;
     width: 105px;
     height: 1px;
     box-shadow: 0 0 5px rgba(1, 255, 81, 0.25);
@@ -42,7 +44,7 @@
     text-shadow: 2px 2px 4px rgba(10, 210, 49, 0.72);
 }
 
-.profileEditForm input{
+.profileEditForm input {
     display: inline-block;
     margin-left: 10px;
     color: azure;
@@ -58,7 +60,7 @@
     cursor: pointer;
     border: none;
     background: none;
-    overflow:hidden;
+    overflow: hidden;
     resize: none;
     width: 100%;
     height: 100px;
@@ -76,6 +78,6 @@
 
 .selectInfo {
     display: flex;
-    gap:20px;
+    gap: 20px;
     margin-bottom: 20px;
 }
