--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -16,10 +16,11 @@
     grid-template-columns: 200px 3fr;
 
     min-height: 150px;
-    border-radius: 30px;
+    border-radius: 5px;
     padding: 20px;
     /*background-color: rgba(58, 255, 0, 0.07);*/
-    box-shadow: inset 0 0 10px 3px rgba(0, 0, 0, 0.62), 0 0 3px rgba(1, 255, 81, 0.25);
+    box-shadow:  0 0 10px 3px rgba(0, 0, 0, 0.62), inset 0 0 3px rgba(1, 255, 81, 0.25);
+
 }
 
 .Photo {
@@ -109,6 +110,21 @@ margin: 0 auto;
     padding: 10px;
     min-height: 133px;
     width: 430px;
+}
+
+.lookingForAJob {
+    display: inline-block;
+    height: 10px;
+    width: 10px;
+    background: rgba(85, 255, 0, 0.53);
+    border-radius: 10px;
+    margin-left: 10px;
+    box-shadow: 0 0 5px rgb(127, 255, 0);
+}
+
+.notLookingForAJob {
+    background: rgba(255, 0, 21, 0.63);
+    box-shadow: 0 0 5px rgb(255, 0, 0);
 }
 
 .descriptionItem {
