--- a/src/components/Users/users.module.css
+++ b/src/components/Users/users.module.css
@@ -8,6 +8,12 @@ input[type=number]{
     -moz-appearance: textfield;
 }
 
+.users {
+
+    width: 80%;
+    margin: 45px auto;
+}
+
 .pagination {
     display: flex;
 }
@@ -63,7 +69,7 @@ input[type=number]{
     color: azure;
     padding: 5px;
     box-shadow: inset 0 0 5px 1px rgba(0, 0, 0, 0.62), 0 0 3px rgba(1, 255, 81, 0.25);
-    border-radius: 7px;
+    border-radius: 5px;
     background: none;
     border: none;
     height: 25px;
@@ -79,7 +85,7 @@ input[type=number]{
     height: 15px;
     padding: 5px;
     box-shadow: inset 0 0 5px 1px rgba(0, 0, 0, 0.62), 0 0 3px rgba(1, 255, 81, 0.25);
-    border-radius: 7px;
+    border-radius: 5px;
     background: none;
     border: none;
 }
@@ -90,8 +96,8 @@ input[type=number]{
     "f i d";
     grid-template-columns: 100px 200px 320px;
 
-    border-radius: 30px;
-    box-shadow: inset 0 0 10px 3px rgba(0, 0, 0, 0.62), 0 0 3px rgba(1, 255, 81, 0.25);
+    border-radius: 5px;
+    box-shadow:  0 0 10px 3px rgba(0, 0, 0, 0.62), inset 0 0 3px rgba(1, 255, 81, 0.25);
     margin: 10px auto;
     padding: 20px;
     width: 90%;
@@ -200,8 +206,8 @@ input[type=number]{
     border: none;
     background: none;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.62);
-    border-radius: 5px;
-    padding: 3px 10px;
+
+
     margin: 10px auto 10px;
 }
 
